--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 数据库配置
 DATABASE_TYPE=sqlite
-SQLITE_DATABASE=default_db
+SQLITE_DATABASE="gemini_balance.db"
 #MYSQL_HOST=gemini-balance-mysql
 #MYSQL_SOCKET=/run/mysqld/mysqld.sock
 #MYSQL_PORT=3306
