--- a/.env
+++ b/.env
@@ -1,20 +1,14 @@
 # 数据库配置
 DATABASE_TYPE=sqlite
 SQLITE_DATABASE="gemini_balance.db"
-#MYSQL_HOST=gemini-balance-mysql
-#MYSQL_SOCKET=/run/mysqld/mysqld.sock
-#MYSQL_PORT=3306
-#MYSQL_USER=gemini
-#MYSQL_PASSWORD=change_me
-#MYSQL_DATABASE=default_db
-API_KEYS=["AIzaSyxxxxxxxxxxxxx654321","AIzaSyxxxxxxxxxxxxx654321"]
+API_KEYS=["AIzaSyxxxxxxxxxxxxx654321"]
 ALLOWED_TOKENS=["sk-654321"]
 AUTH_TOKEN=sk-654321
 # For Vertex AI Platform API Keys
 VERTEX_API_KEYS=["AQ.Abxxxxxxxxxxxxxx654321"]
 # For Vertex AI Platform Express API Base URL
 VERTEX_EXPRESS_BASE_URL=https://aiplatform.googleapis.com/v1beta1/publishers/google
-TEST_MODEL=gemini-1.5-flash
+TEST_MODEL=gemini-2.5-flash
 THINKING_MODELS=["gemini-2.5-pro"]
 THINKING_BUDGET_MAP={"gemini-2.5-pro": 4000}
 IMAGE_MODELS=["gemini-2.5-pro"]
